--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/sample_data/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -96,17 +97,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Exo Bold
+      fonts:
+        - asset: assets/fonts/Exo2-Bold.ttf
+    - family: Exo Regular
+      fonts:
+        - asset: assets/fonts/Exo2-Regular.ttf
+    - family: Exo Medium
+      fonts:
+        - asset: assets/fonts/Exo2-Medium.ttf
+    - family: Exo Light
+      fonts:
+        - asset: assets/fonts/Exo2-Light.ttf
+    - family: Exo Thin
+      fonts:
+        - asset: assets/fonts/Exo2-Thin.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
